JumpScript/tests/baselines/reference/jmpxDynamicTagName2.errors.txt
tests/cases/conformance/jsx/jmpxDynamicTagName2.jmpx(9,1): error TS2339: Property 'customTag' does not exist on type 'JSX.IntrinsicElements'.
tests/cases/conformance/jsx/jmpxDynamicTagName2.jmpx(9,25): error TS2339: Property 'customTag' does not exist on type 'JSX.IntrinsicElements'.


==== tests/cases/conformance/jsx/jmpxDynamicTagName2.jmpx (2 errors) ====
    declare module JSX {
    	interface Element { }
    	interface IntrinsicElements {
            div: any
    	}
    }
    
    var customTag = "h1";
    <customTag> Hello World </customTag>  // This should be an error. The lower-case is look up as an intrinsic element name
    ~~~~~~~~~~~
!!! error TS2339: Property 'customTag' does not exist on type 'JSX.IntrinsicElements'.
                            ~~~~~~~~~~~~
!!! error TS2339: Property 'customTag' does not exist on type 'JSX.IntrinsicElements'.